# KCOM

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
examples/: loopback_test.kcom  modbus_rtu_master.kcom  tcp_echo_client.kcom
kcom/: __init__.py  app.py
kcom/api/: server.py
kcom/core/: __init__.py  data_pipeline.py  filter.py  log_manager.py  port_access.py  port_session.py  project_manager.py  sequence_runner.py  session_manager.py  settings_store.py  tap_session.py  trigger_engine.py
kcom/decoders/: __init__.py  base_decoder.py
kcom/models/: __init__.py  port_config.py  project.py  sequence.py  terminal_style.py  trigger.py
kcom/plugins/: __init__.py  loader.py  plugin_base.py
kcom/protocols/: __init__.py  base_protocol.py  named_pipe.py  serial_port.py  tcp_client.py  tcp_server.py  udp_socket.py  usb_hid.py
kcom/resources/: __init__.py  help_content.py
kcom/scripting/: __init__.py  runtime.py
kcom/ui/: __init__.py  doc_panel.py  help_browser.py  log_panel.py  main_window.py  port_panel.py  script_panel.py  sequence_panel.py  terminal_table.py  terminal_widget.py  theme_manager.py  trigger_panel.py
kcom/utils/: __init__.py  checksum.py  encoding.py  (+3 more)
tests/: conftest.py  test_checksum.py  test_core_data_pipeline.py  test_core_project_manager.py  test_core_sequence_runner.py  test_core_settings_store.py  test_core_trigger_engine.py  test_encoding.py  test_models_port_config.py  test_models_project.py  test_models_sequence.py  test_models_trigger.py  test_utils_platform.py  test_utils_singleton.py
(+11 files in other folders)
